# scheduler

./: Cargo.toml  README.md  viable.txt
cache/: buildings.json  custom.json
src/: fetch.rs  main.rs  schedule.rs  structs.rs  web.rs
templates/: display.html  index.html
