[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
haversine-rs = "0.3.0"
minijinja = { version = "2.12.0", features = ["builtins", "loader"] }
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = "0.12.23"
futures = "0.3.31"